syntax = "proto3";

package order;

option go_package = "Assignment2_AdelKenesova/order_service/proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (Empty);
  rpc ListOrders (Empty) returns (ListOrdersResponse);
}

message Order {
  uint64 id = 1;
  uint64 user_id = 2;
  repeated OrderItem items = 3;
  double total_price = 4;
  string status = 5;
  string created_at = 6;
}

message OrderItem {
  uint64 product_id = 1;
  uint64 quantity = 2;
  double price = 3;
}

message CreateOrderRequest {
  uint64 user_id = 1;
  repeated OrderItem items = 2;
}

message GetOrderRequest {
  uint64 id = 1;
}

message DeleteOrderRequest {
  uint64 id = 1;
}

message OrderResponse {
  Order order = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message Empty {}
